--- a/conf/hieradata/dispatcher.yaml
+++ b/conf/hieradata/dispatcher.yaml
@@ -1,7 +1,30 @@
 ---
+
+# base stuff
+timezone::region: 'Australia'
+timezone::locality: 'Melbourne'
+
+cloudwatchlogs::region: 'ap-southeast-2'
+
+base::packer_user: "%{hiera('packer_user')}"
+base::packer_group: "%{hiera('packer_group')}"
+
+base::aws_agents_install_url: 'https://d1wk0tztpsntt1.cloudfront.net/linux/latest/install'
+
+base::tmp_dir: "%{hiera('tmp_dir')}"
+
+# httpd stuff
+httpd::tmp_dir: "%{hiera('tmp_dir')}"
+
+# dispather stuff
+
 dispatcher::aem_dispatcher_source: 'https://www.adobeaemcloud.com/content/companies/public/adobe/dispatcher/dispatcher/_jcr_content/top/download_8/file.res/dispatcher-apache2.4-linux-x86-64-4.2.1.tar.gz'
 dispatcher::filename: 'dispatcher-apache2.4-linux-x86-64-4.2.1.tar.gz'
 dispatcher::module_filename: 'dispatcher-apache2.4-4.2.1.so'
 dispatcher::packer_user: "%{hiera('packer_user')}"
 dispatcher::packer_group: "%{hiera('packer_group')}"
 dispatcher::tmp_dir: "%{hiera('tmp_dir')}"
+
+
+# set server spec staging dir
+serverspec::staging_directory: "%{::staging_directory}"
